--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PortfolioWebsite</title>
+    <!-- bootstrap css -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- custom Css -->
     <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
     <!-- Navigation bar starts here -->
-    <nav class="NaviBar">
+    <nav class="NaviBar" id="navbar">
         <div class="leftNav">
             <!-- LOGO -->
             <img src="img/LOGO.png" alt="LOGO">
@@ -43,8 +47,81 @@
         </div>
     </div>
     <!-- Home part 1 ends here -->
+    <!-- Home part 2 starts here -->
+    <div class="Hpart2">
+        <div class="Heading">
+            <img src="img/Icon.svg" alt="">
+            <h1>About Me</h1>
+        </div>
+        <p class="para"><span class="para_span">Lorem ipsum dolor sit amet</span>, consectetur adipisicing elit. Quaerat
+            maiores ex
+            officia quia
+            similique rerum.
+            Saepe, illum temporibus eaque, omnis amet dolore ducimus quae, eius cum asperiores cupiditate aliquam natus.
+        </p>
+        <div class="Box">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi accusantium deleniti itaque, esse vero
+                veniam animi sequi hic. Sequi ad, culpa quis in reiciendis, cupiditate odio hic fugit adipisci saepe
+                voluptatem. Eum veritatis quis iure labore temporibus aperiam cumque, praesentium veniam dolore esse
+                rerum iste corporis fugit minima tempora accusamus. Et repellendus dolore consectetur earum aperiam
+                obcaecati adipisci laborum voluptate, itaque, non distinctio est incidunt! Ullam iure nisi incidunt
+                repellat corporis mollitia ipsa velit fugiat! Animi iste porro eius quis debitis odit blanditiis
+                mollitia molestiae dolorem. Vitae id sapiente, eum saepe sequi exercitationem unde voluptatibus fuga
+                laborum obcaecati consequuntur consectetur.</p>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum ducimus numquam quibusdam, impedit
+                rerum asperiores temporibus reprehenderit beatae ullam id magni. Est animi dolore voluptatibus cumque
+                deserunt nostrum voluptates dolorum eaque accusantium unde rem, nihil corrupti assumenda in pariatur
+                itaque sunt reprehenderit fugiat molestias fugit maxime commodi natus voluptatem? Et similique
+                voluptatum labore quos ex, fuga provident, blanditiis saepe nobis aliquid mollitia sit eveniet officia
+                qui est, incidunt quas non quibusdam eos tempore culpa voluptatem. Nisi suscipit amet laudantium ipsum
+                velit optio fugiat a, cum omnis, ducimus voluptas eius aperiam voluptatibus reprehenderit quibusdam et?
+                Atque adipisci quos tempora tenetur beatae!</p>
+        </div>
+        <div class="bottomBox">
+            <img src="img/cloud-line-art.svg" alt="">
+            <div class="Box2">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem fuga assumenda quam asperiores
+                    voluptatem voluptatibus, alias earum veritatis iusto aspernatur accusantium fugit! Sequi eveniet
+                    possimus enim, officiis dolorem fugiat animi nemo quod ad. Ea facere pariatur commodi, molestias
+                    cumque voluptatum explicabo eligendi at expedita blanditiis rerum doloremque quidem culpa inventore
+                    deleniti nulla hic quod nemo voluptates? Facere accusantium dolor maxime a suscipit, illo hic vitae
+                    explicabo aut eum sit dolores debitis? Soluta debitis magnam totam? Officia facilis corporis
+                    consectetur iure, sequi obcaecati aut nihil est dolorum velit reiciendis? Praesentium ratione
+                    asperiores perspiciatis sint porro doloremque exercitationem accusamus ex odit et?
+                </p>
+            </div>
+        </div>
+    </div>
+    <!-- Home part 2 ends here -->
+    <!-- Home part 3 starts here -->
+    <div class="Hpart3">
+        <h1>Projects</h1>
+        <div class="Box31">
+            <h3>Lorem ipsum dolor sit amet.</h3>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque ratione ea corporis cupiditate quis
+                fugit beatae sunt, placeat deleniti delectus est facere illo dolor explicabo quaerat, sapiente
+                aspernatur illum. Excepturi iusto deleniti iure odio culpa eligendi doloribus, consectetur iste sunt
+                suscipit voluptatibus laborum fugiat deserunt harum voluptate aliquam velit voluptas.</li>
+            <li class="dd">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae ipsum quibusdam quidem
+                impedit rerum
+                eligendi quasi in ex voluptate, repellat est aut recusandae, delectus quas eveniet nostrum quia dolores
+                asperiores at sequi aliquid. Error consectetur repellat magni dolores voluptas necessitatibus, vel,
+                beatae explicabo perferendis consequatur pariatur ipsum voluptate. Aliquam, itaque!</li>
+        </div>
+        <div class="card flotcard" style="width: 35rem;">
+            <img src="img/cartimg.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <p class="card-text"><a href="#">Click here</a></p>
+            </div>
+        </div>
+    </div>
 
 
+    <!-- bootstrap js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
     <!-- custom js -->
     <script src="test.js"></script>
 </body>
